@@ -1,5 +1,7 @@
 === master
 
+* Remove before method, users should switch to after_options_hook plugin (jeremyevans)
+
 * Move after_options hook to after_options_hook plugin (jeremyevans)
 
 * Add help_option_values plugin for showing allowed option values (jeremyevans)
